<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.udacity.androidbasics.tomazmartins.metalshow.MainActivity"
    tools:showIn="@layout/content_block"
    android:orientation="vertical"
    style="@style/questionBlock">

    <TextView
        style="@style/stdText"
        android:id="@+id/xv_rwq"
        android:text="@string/example_question"/>

    <RadioGroup
        android:id="@+id/rdg_rwq"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rwq_option_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_answer"/>

        <RadioButton
            android:id="@+id/rwq_option_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_answer"/>

    </RadioGroup>

</LinearLayout>