<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.udacity.androidbasics.tomazmartins.metalshow.activity.MainActivity"
    tools:showIn="@layout/activity_main"
    style="@style/scoreBlock">

    <TextView
        style="@style/titleOnPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/stdMargin"
        android:textAllCaps="true"
        android:text="@string/app_name"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/stdMargin"
            android:orientation="vertical">

            <TextView
                style="@style/titleOnPrimary"
                android:id="@+id/txv_total_score"
                android:gravity="end"
                android:textSize="@dimen/scoreSize"
                android:text="@string/std_score" />

            <TextView
                style="@style/textOnPrimary"
                android:id="@+id/txv_score"
                android:gravity="end"
                android:text="@string/score"/>

        </LinearLayout>

</RelativeLayout>